deploy/openshift/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-api
  labels:
    app.kubernetes.io/name: portal-api
    app.kubernetes.io/part-of: mockerportal
spec:
  selector:
    app.kubernetes.io/name: portal-api
  ports:
    - name: http
      port: 8080
      targetPort: http
