deploy/openshift/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-ui
  labels:
    app.kubernetes.io/name: portal-ui
    app.kubernetes.io/part-of: mockerportal
spec:
  selector:
    app.kubernetes.io/name: portal-ui
  ports:
    - name: http
      port: 8080
      targetPort: http
